<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".inicioSesion.LoginActivity"
    android:background="@drawable/pant_login">

    <Button
        android:id="@+id/bt_acceso"
        android:layout_width="140dp"
        android:layout_height="54dp"
        android:backgroundTint="#C7112C"
        android:text="Acceso"
        android:textSize="23dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.89" />

    <Button
        android:id="@+id/bt_registro"
        android:layout_width="140dp"
        android:layout_height="54dp"
        android:backgroundTint="#0F1871"
        android:text="Registro"
        android:textSize="23dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.864"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.89" />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="76dp"
        android:layout_height="21dp"
        android:layout_marginTop="396dp"
        android:text="Nombre"
        android:textColor="#C7112C"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.158"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="305dp"
        android:layout_height="50dp"
        android:layout_marginTop="420dp"
        android:ems="10"
        android:hint="Nombre"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvContrasena"
        android:layout_width="131dp"
        android:layout_height="21dp"
        android:layout_marginTop="88dp"
        android:text="Contraseña"
        android:textColor="#C7112C"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNombre" />

    <EditText
        android:id="@+id/etContrasena"
        android:layout_width="305dp"
        android:layout_height="50dp"
        android:layout_marginTop="56dp"
        android:hint="Contraseña"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombre"
        android:password="true"/>

</androidx.constraintlayout.widget.ConstraintLayout>