<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".inicioSesion.RegistroActivity"
    android:background="@drawable/pant_registro">

    <Button
        android:id="@+id/bt_registrarse"
        android:layout_width="243dp"
        android:layout_height="52dp"
        android:backgroundTint="#C7112C"
        android:text="Registrarse"
        android:textSize="23dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.88" />


    <EditText
        android:id="@+id/etContrasena1"
        android:layout_width="305dp"
        android:layout_height="50dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:inputType="text"
        android:hint="Contraseña"
        android:password="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombre" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="305dp"
        android:layout_height="50dp"
        android:layout_marginTop="272dp"
        android:ems="10"
        android:inputType="text"
        android:hint="Nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvContrasena1"
        android:layout_width="131dp"
        android:layout_height="21dp"
        android:layout_marginTop="84dp"
        android:text="Contraseña"
        android:textColor="#C7112C"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNombre" />

    <EditText
        android:id="@+id/etContrasena2"
        android:layout_width="305dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="text"
        android:hint="Contraseña"
        android:password="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etContrasena1"
        app:layout_constraintVertical_bias="0.249" />

    <TextView
        android:id="@+id/tvContrasena2"
        android:layout_width="197dp"
        android:layout_height="23dp"
        android:layout_marginTop="68dp"
        android:text="Repetición contraseña"
        android:textColor="#C7112C"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.247"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvContrasena1"
        app:layout_constraintVertical_bias="0.073" />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="76dp"
        android:layout_height="21dp"
        android:layout_marginTop="252dp"
        android:text="Nombre"
        android:textColor="#C7112C"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.158"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>