...
        android:translationY="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_jugar"
        android:layout_width="177dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#C7112C"
        android:text="Jugar"
        android:textSize="23dp"
        android:translationX="115dp"
        android:translationY="470dp"


        tools:layout_editor_absoluteY="450dp" />
...
